# hackathon_kumo

./: .gitignore  KumoRFM_quickstart.ipynb  RAILWAY_DEPLOYMENT.md  USER_ANALYSIS_SETUP.md  clean_data.py  cleaned_data.csv  railway.toml  raw_data.csv  readme.md  requirements.txt
backend/: .env.local  pyproject.toml  railway.toml  requirements.txt  test_cache.py
backend/app/: cache_manager.py  config.py  db.py  db_optimizer.py  estimators.py  images.py  main.py  rfm_reco.py  security.py
frontend/: index.html  package-lock.json  package.json  railway.toml  vite.config.ts
frontend/src/: config.ts  main.tsx  styles.css
frontend/src/components/: AuthGuard.tsx  Topbar.tsx  TwoCol.tsx
frontend/src/pages/: Profile.tsx  Search.tsx  SignIn.tsx  SignUp.tsx  UniversityProfile.tsx  UserAnalysis.tsx
synthetic_user_data/: generate_synthetic_data.py
